<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start"
    android:background="@drawable/bg1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="72dp"
        android:text="@string/test"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/regular"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:background="@drawable/rectangle1"
        android:text="@string/regular"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/normal"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:background="@drawable/rectangle1"
        android:text="@string/normal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/happy"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:background="@drawable/rectangle1"
        android:text="@string/happy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sad"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:background="@drawable/rectangle1"
        android:text="@string/sad"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:text="@string/homepage"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>